--- a/src/components/ListOfGifs/styles.css
+++ b/src/components/ListOfGifs/styles.css
@@ -1,31 +1,17 @@
-:root {
-    --results-columns: 2;
+  .my-masonry-grid {
+    display: -webkit-box; /* Not needed if autoprefixing */
+    display: -ms-flexbox; /* Not needed if autoprefixing */
+    display: flex;
+    margin-left: -30px; /* gutter size offset */
+    width: auto;
+  }
+  .my-masonry-grid_column {
+    padding-left: 10px; /* gutter size */
+    background-clip: padding-box;
   }
   
-  .ListOfGifs {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-gap: 0 16px;
-    align-items: center;
-    grid-template-rows: masonry;
-    min-height: 100vh;
-  }
-  
-  .ListOfGifs-item {
-
-    background-color: #eee;
-    display: inline-block;
-    width: 100%;
-  }
-  
-  @media (min-width: 600px) {
-    :root {
-      --results-columns: 3;
-    }
-  }
-  
-  @media (min-width: 800px) {
-    :root {
-      --results-columns: 4;
-    }
+  /* Style your items */
+  .my-masonry-grid_column > div { /* change div to reference your elements you put in <Masonry> */
+    background: grey;
+    margin-bottom: 10px;
   }
