--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,20 @@
   width: 100%;
 }
 
+.btn {
+  background: var(--brand-color_3);
+  border: 0;
+  color: #fff;
+  padding: 8px 16px;
+  font-size: 16px;
+}
+
+.btn[disabled] {
+  opacity: .3;
+  pointer-events: none;
+}
+
+
 @media screen and (min-width: 55rem){
   .App-main{
     flex-direction: initial;
